<resources>

    <string name="app_name">Move Mate</string>
    <string name="find">Cerca Percorso</string>
    <string name="map">Mappa</string>
    <string name="myRoutes">I Miei Percorsi</string>
    <string name="hint_route_name">Inserisci Nome Percorso</string>
    <string name="create_step_1">Passo 1/3</string>
    <string name="create_car">Macchina</string>
    <string name="create_moto">Moto</string>
    <string name="create_public_transport">Trasporto Pubblico</string>
    <string name="create_train">Treno</string>
    <string name="create_available">Posti Disponibili</string>
    <string name="create_to_address">Partenza</string>
    <string name="create_from_address">Destinazione</string>
    <string name="hint_venue">Cerca Sede</string>
    <string name="hint_address">Cerca Indirizzo</string>
    <string name="create_create">Crea</string>
    <string name="create_price">Scegli Prezzo</string>
    <string name="create_helmet">Casco Disponibile</string>
    <string name="train">Treno</string>
    <string name="metro">Metro</string>
    <string name="tram">Tram</string>
    <string name="bus">Autobus</string>
    <string name="create_desc">Inserisci Descrizione</string>
    <string name="create_start_date">Data</string>
    <string name="hint_route_date">Inserisci Data</string>
    <string name="create_start_time">Ora</string>
    <string name="hint_route_time">Inserisci Ora</string>
    <string name="profile">Profilo</string>
    <string name="settings">Impostazioni</string>
    <string name="insert_code">Inserisci Codice Di Verifica</string>
    <string name="send_code">Invia Codice Di Verifica</string>
    <string name="insert_email">Inserisci Email Universitaria</string>
    <string name="verify">Verifica</string>
    <string name="create_to_venue">Sede Di Destinazione</string>
    <string name="create_from_venue">Sede Di Partenza</string>
    <string name="from">DA:</string>
    <string name="to">A:</string>
    <string name="choose_to">verso università</string>
    <string name="choose_from">da università</string>
    <string name="university">Università</string>
    <string name="confirm">Conferma</string>
    <string name="price">Prezzo (a testa):</string>
    <string name="description">Descrizione</string>
    <string name="seats">Posti Disponibili</string>
    <string name="yes">SI</string>
    <string name="no">NO</string>
    <string name="type">Tipologia Mezzi</string>
    <string name="participants">Partecipanti</string>
    <string name="mate">mate</string>
    <string name="start">Partenza</string>
    <string name="error_create">Impossibile creare percorso.</string>
    <string name="error_getpath">Impossibile recuperare lista percorsi.</string>
    <string name="loading_info">Recupero informazioni</string>
    <string name="loading_app">Controllo informazioni utente...</string>
    <string name="loading_path">Recupero percorsi...</string>
    <string name="loading_creation">Creazione percorso...</string>
    <string name="create">CREA</string>
    <string name="delete">CANCELLA</string>
    <string name="leave">ESCI</string>
    <string name="join">PARTECIPA</string>
    <string name="join_confirm">Confermi la partecipazione?</string>
    <string name="cancel">Annulla</string>
    <string name="delete_confirm">Cancellare percorso?</string>
    <string name="disjoin_confirm">Abbandonare percorso?</string>
    <string name="missing_fields">Alcuni campi sono vuoti</string>
    <string name="dep_err">Scegli la sede dalla lista!</string>
    <string name="missing_vehicle">Veicolo mancante</string>
    <string name="distance">Distanza (metri)</string>
    <string name="choose_direction">Scegli Percorso</string>
    <string name="next">Prossimo</string>
    <string name="error_missing_public_type">Seleziona almeno un tipo di mezzo pubblico.</string>
    <string name="free">GRATIS</string>
    <string name="create_step_2">Passo 2/3</string>
    <string name="error_missing_date">Data o Ora mancanti</string>
    <string name="error_venue">Sede non valida.</string>
    <string name="create_step_3">Passo 3/3</string>
    <string name="feedback">Feedback</string>
    <string name="info">Dettagli Utente</string>
    <string name="close">TERMINA</string>
    <string name="close_confirm">Terminare il percorso?</string>
    <string name="close_text">Gli altri mates potranno ancora inviare il feedback.</string>
    <string name="feed">Invia Feedback</string>
    <string name="send">Invia</string>
    <string name="filter_vehicle">Tipologia mezzo di trasporto e prezzo</string>
    <string name="path_info">Info</string>
    <string name="filter_step_1">Passo 1/2</string>
    <string name="filter_step_2">Passo 2/2</string>
    <string name="error_join">Impossibile partecipare al percorso.</string>
    <string name="error_close">Impossibile chiudere il percorso.</string>
    <string name="error_feed">Impossibile inviare feedback.</string>
    <string name="error_delete">Impossibile cancellare il percorso.</string>
    <string name="error_disjoin">Impossibile lasciare il percorso.</string>
    <string name="error_info">Impossibile recuperare le info del percorso.</string>
    <string name="error_email">Email non valida.</string>
    <string name="phone_number">Numero Di Telefono</string>
    <string name="hint_phone_number">Inserisci numero di telefono</string>
    <string name="phone_spec">Inserisci il numero di telefono per entrare in contatto con gli altri Mates.</string>
    <string name="error_mobile">Numero non valido.</string>
    <string name="code_spec">Riceverai un SMS con un codice per verificare il tuo numero di telefono.</string>
    <string name="hint_code">Codice</string>
    <string name="wrong_number">Numero di telefono errato?</string>
    <string name="error_code">Codice errato.</string>
    <string name="email_spec">Inserisci la tua email istituzionale per verificare che tu sia uno studente universitario.</string>
    <string name="error_send_email_code">Impossibile inviare email di verifica.</string>
    <string name="success">Successo!</string>
    <string name="wrong_email">Indirizzo email errato?</string>
    <string name="email_code_spec">Controlla la tua casella email e inserisci il codice che hai ricevuto qui sotto.</string>
    <string name="email">Email</string>
    <string name="fb_login">   Log In Con Facebook</string>
    <string name="no_sms_permission">Permetti a MoveMate di inviare e ricevere SMS dalle Impostazioni</string>
    <string name="call">Chiama</string>
    <string name="message">Sms</string>
    <string name="ms_no_routes_main">Non fai parte di nessun percorso!\nCercane uno o crealo tu stesso.</string>
    <string name="ms_no_routes_find">Nessun percorso disponibile per la tua ricerca</string>
    <string name="no_filter_venues">Qualunque sede</string>
    <string name="closed">Chiuso</string>
</resources>
