<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.movemate.Email.EmailCheckActivity"
    android:background="@color/White"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:text="@string/email_code_spec"
        android:layout_gravity="center"
        android:gravity="center"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:inputType="number"
        android:id="@+id/code"
        android:hint="@string/hint_code"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <TextView
        android:id="@+id/wrong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:text="@string/wrong_email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Small"
        android:textColor="@color/colorPrimary" />


</LinearLayout>