<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.movemate.FilterFragment"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_vehicle"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:id="@+id/transport_title"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/create_car"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/car"
        android:layout_below="@+id/transport_title"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/create_moto"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/moto"
        android:layout_below="@+id/car"/>


    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/create_public_transport"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/public_transport"
        android:layout_below="@+id/moto"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_gravity="bottom"
        android:id="@+id/confirm_button"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_price"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/public_transport"
        android:id="@+id/price_title_top"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
    <RelativeLayout
        android:id="@+id/car_price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_below="@+id/price_title_top"
        android:layout_marginBottom="10dp">

        <SeekBar
            android:id="@+id/price_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="10"
            android:layout_below="@+id/price_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price_title"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:layout_toEndOf="@+id/price_title"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </RelativeLayout>


</RelativeLayout>

