<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_check"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="app.movemate.CheckActivity"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_email"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:id="@+id/email"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/send_code"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_send_code"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insert_code"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:maxLength="6"
        android:inputType="number"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/verify"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:layout_marginTop="20dp"
        android:id="@+id/button2" />

</LinearLayout>
