<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="app.movemate.Filter.FilterDepartmentFragment">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/filter_step_2"
        android:textAllCaps="true"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/White" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/university"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:id="@+id/uni_spinner">

        </Spinner>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_to_venue"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <AutoCompleteTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_venue"
                        android:id="@+id/venue"
                        android:maxLines="1"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:textColor="@color/colorPrimary"/>

                    <ImageButton
                        android:id="@+id/venue_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_delete"
                        android:backgroundTint="@color/colorAccent"/>

                </LinearLayout>
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="bottom"
        android:id="@+id/next"
        android:textSize="@dimen/cast_expanded_controller_control_button_margin"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"/>

</LinearLayout>
