<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Create.CreateTransportFragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">
        <TextView
            android:id="@+id/transport_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/create_step_1"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/White" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                android:id="@+id/vehicles">

                <RadioButton
                    android:id="@+id/car"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_car"
                    android:checked="true"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>



                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/car_avaible_layout">

                    <SeekBar
                        android:id="@+id/car_avaible_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="3"
                        android:layout_below="@+id/car_avaible_title"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_available"
                        android:id="@+id/car_avaible_title"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/car_avaible"
                        android:layout_toEndOf="@+id/car_avaible_title"
                        android:layout_marginStart="5dp"
                        android:gravity="top"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/car_price_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp">

                    <SeekBar
                        android:id="@+id/car_price_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:layout_below="@+id/car_price_title"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_price"
                        android:id="@+id/car_price_title"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/car_price"
                        android:layout_toEndOf="@+id/car_price_title"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
                </RelativeLayout>

                <RadioButton
                    android:id="@+id/moto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_moto"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="5dp"/>



                <RelativeLayout
                    android:id="@+id/moto_price_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="10dp"
                    android:layout_marginBottom="10dp">

                    <SeekBar
                        android:id="@+id/moto_price_seekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:max="10"
                        android:layout_below="@+id/moto_price_title"
                        android:layout_marginBottom="5dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/create_price"
                        android:id="@+id/moto_price_title"
                        android:layout_marginBottom="5dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/moto_price"
                        android:layout_toEndOf="@+id/moto_price_title"
                        android:layout_marginStart="5dp"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/moto_price_seekBar"
                        android:text="@string/create_helmet"
                        android:id="@+id/helmet"/>

                </RelativeLayout>


                <RadioButton
                    android:id="@+id/public_transport"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_public_transport"
                    android:layout_gravity="center_vertical"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="5dp"/>





                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginStart="5dp"
                    android:id="@+id/public_transport_layout"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_weight="0.5"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/train"
                                android:id="@+id/train"/>
                            <CheckBox
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/metro"
                                android:id="@+id/metro"/>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:layout_weight="0.5">

                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tram"
                                android:id="@+id/tram"/>
                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/bus"
                                android:id="@+id/bus" />
                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </RadioGroup>


        </RelativeLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_date"
                android:id="@+id/date_btn"
                android:backgroundTint="@color/colorAccent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_route_date"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:id="@+id/group_date" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_time"
                android:backgroundTint="@color/colorAccent"
                android:id="@+id/time_btn" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_route_time"
                android:layout_gravity="center_vertical"
                android:textColor="@color/colorPrimary"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                android:id="@+id/group_time"/>

        </LinearLayout>

    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="bottom"
        android:id="@+id/next"
        android:textSize="@dimen/cast_expanded_controller_control_button_margin"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"
        />


</LinearLayout>
