<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/create_price"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textColor="@color/White" />

    <RelativeLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:padding="10dp">


        <SeekBar
            android:id="@+id/price_seekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="10"
            android:layout_below="@+id/price_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/price_title"
            android:layout_marginBottom="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/price"
            android:layout_toEndOf="@+id/price_title"
            android:layout_marginStart="5dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>
    </RelativeLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_gravity="bottom"
        android:id="@+id/next"
        android:textSize="@dimen/cast_expanded_controller_control_button_margin"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/White"/>

</LinearLayout>